--- a/storeapp/templates/login.html
+++ b/storeapp/templates/login.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
+  <head>
+    <title>Login</title>
+  </head>
+    <a href="{% url 'register' %}"> Register </a>
+    <hr></hr>
+    <h4>Login</h4>
+    <form method='post'>
+        {% csrf_token %}
+        {{form}}
+        <input type="submit" value="Login"> </input>
+    </form>
 {% endblock %}
