--- a/storeapp/templates/index.html
+++ b/storeapp/templates/index.html
@@ -23,7 +23,7 @@
                         <div>{{ product.description }}</div>
                         <div><small>in stock: {{product.stock_amount}}</small></div>
                         <div><b>$ {{ product.price }}</b></div>
-                        <form action="">
+                        <form method="post">
                             {% csrf_token %}
                             {{form}}
                             <input type="submit" value="Buy">
