--- a/storeapp/templates/purchase.html
+++ b/storeapp/templates/purchase.html
@@ -11,5 +11,9 @@
       <p>
         Thank you for your purchase.
       </P>
+      <p>
+        Yor order number: 
+      </P>
+
     </div>
 {% endblock %}
