--- a/storeapp/templates/index.html
+++ b/storeapp/templates/index.html
@@ -11,7 +11,9 @@
             <button type="submit">Logout</button>
         </form>
         <hr></hr>
-        <h4>Homepage</h4>
+        <h3>Homepage</h3>
+        <a href="{% url 'myorders' %}">My orders</a>
+
         <div>
             <h5>Products:</h5>
             <ul>
